Fixed signal icon spacing

--- a/static/index.css
+++ b/static/index.css
@@ -163,6 +163,7 @@ html, body {
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 70px;
 }
 
 .buttonSJ {
@@ -173,6 +174,7 @@ html, body {
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 70px;
 }
 
 .buttonMA {
@@ -183,6 +185,7 @@ html, body {
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 70px;
 }
 
 .defaultButton {
@@ -276,7 +279,8 @@ html, body {
 .blinking-signal {
   width: 30px;       /* match your other icon sizes */
   height: 30px;
-  margin-left: 5px;  /* small gap from the time text */
+  margin-left: 2px;  /* small gap from the time text */
+  margin-bottom: 30px;
   animation: blink-animation 1s steps(5, start) infinite;
 }
 
